/** Responsible for attesting the physical nodes identity.
The plugin will be responsible to retrieve an identity document or data associated with the physical node.
This data will be used when calling the NodeAPI on the Control Plane.*/
syntax = "proto3";
package node_agent_proto;

import public "github.com/spiffe/sri/node_agent/plugins/common/proto/common.proto";

/**A type which contains attestation data for specific platform.*/
message AttestedData {
    string type = 1; ///Type of attestation to perform.
    bytes data = 2; ///The attestetion data.
}

/** Represents an empty request.*/
message FetchAttestationDataRequest {}

/** Represents the attested data and base SPIFFE ID.*/
message FetchAttestationDataResponse {
    AttestedData attestedData = 1; ///A type which contains attestation data for specific platform.
    string spiffeId = 2; //SPIFFE ID.
}

service NodeAttestor {
    /// Returns the node attestation data for specific platform and the generated Base SPIFFE ID for CSR formation.
    rpc FetchAttestationData(FetchAttestationDataRequest) returns (FetchAttestationDataResponse);
    /// Applies the plugin configuration and returns configuration errors.
    rpc Configure(ConfigureRequest) returns (ConfigureResponse);
    /// Returns the version and related metadata of the plugin.
    rpc GetPluginInfo(GetPluginInfoRequest) returns (GetPluginInfoResponse);
}
